<resources>

    <string name="app_name">Informativna Agencija</string>


    <string name="action_title">Contacts</string>

    <string name="add_contact_text_title">Add contact data:</string>

    <string name="detail_name">Name:</string>
    <string name="detail_surname">Surname:</string>
    <string name="detail_adress">Adress:</string>
    <string name="detail_home_number">Home number:</string>
    <string name="detail_work_number">Work number:</string>
    <string name="detail_mobile_number">Mobile number:</string>

    <string name="add_number_title">Add phone number:</string>
    <string name="add_phone_number">Number:</string>
    <string name="add_comment">comment</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="delete_number">Delete Number</string>

    <string name="preferences_toast_title">Toast message</string>
    <string name="preferences_toast_key">Toast</string>
    <string name="preferences_toast_summary">Show action as a toast message</string>

    <string name="preferences_notification_title">Notification message</string>
    <string name="preferences_notification_key">Notification</string>
    <string name="preferences_notification_summary">Show action as a notification message</string>

    <string name="notification_add_title">Add Contact</string>
    <string name="notification_add_text">New Contact has been added in the list</string>
    <string name="notification_add_number_title">Add Phone Number</string>
    <string name="notification_add_number_text">New Phone Number has been added in the list</string>
    <string name="notification_edit_title">Edit Contact</string>
    <string name="notification_edit_text">Contant data has been editted</string>
    <string name="notification_delete_title">Delete Contact</string>
    <string name="notification_delete_text">Contact has been deleted</string>

    <string name="alert_dialog">Autor aplikacije: Milan Malovic</string>
    <string name="alert_button_ok">OK</string>
    <string name="app_name_toolbar">Contact</string>

    <string-array name="spinner_number_category">
        <item>Home number</item>
        <item>Work number</item>
        <item>Mobile number</item>
    </string-array>

    <string name="menu_import">Import</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>



    <string name="about">About</string>

    <string name="contact">Contact</string>
    <string name="settings">Settings</string>

</resources>
